--- a/website/src/styles/style.css
+++ b/website/src/styles/style.css
@@ -62,7 +62,7 @@ body .main {
   background-size: cover;
 }
 body .main .name {
-  padding-left: 10%;
+  padding-left: 20px;
   padding-top: 270px;
   width: 500px;
 }
