--- a/website/src/styles/style.scss
+++ b/website/src/styles/style.scss
@@ -58,7 +58,7 @@ body{
         background-color: #edf1fd;
         background-size: cover;
         .name{
-            padding-left: 10%;
+            padding-left: 20px;
             padding-top: 270px;
             width: 500px;
             p:nth-child(1),.name .details{
